# dbproblem

./: .flake8  README.md  docker-compose.yaml  pyproject.toml  pyprojrect.toml
ledger_service/: requirements.txt
ledger_service/api/: main.py
ledger_service/core/: database.py  models.py  operations.py
ledger_service/migrations/: env.py
ledger_service/migrations/versions/: 001_initial.py
ledger_service/tests/: conftest.py  test_ledger.py
