[tool.poetry]
name = "ledger-service"
version = "0.1.0"
description = "Shared ledger system"
authors = ["Your Name <your.email@example.com>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.115.7"
uvicorn = "^0.34.0"
sqlalchemy = "^2.0.37"
asyncpg = "^0.30.0"
pydantic = "^2.10.6"
alembic = "^1.14.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"